# tron-wallet

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  build.bat  dev.bat  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
generated-icons/: resize.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  nft.rs  settings.rs  wallet.rs
src-tauri/src/core/: mod.rs  transaction.rs  tron.rs  wallet.rs
src-tauri/src/crypto/: keystore.rs  mnemonic.rs  mod.rs
src-tauri/src/db/: repository.rs  schema.rs
src-tauri/src/models/: mod.rs  transaction.rs  wallet.rs
src-tauri/src/network/: mod.rs  price_api.rs  tron_client.rs
src-tauri/src/utils/: clipboard.rs  logger.rs  mod.rs
src/components/: SwapModal.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  CommandPalette.tsx  EmptyState.tsx  GlassCard.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Tabs.tsx
src/i18n/: config.ts  en.json  zh-CN.json  zh-TW.json
src/pages/: AddressBook.tsx  DApp.tsx  Dashboard.tsx  History.tsx  Multisig.tsx  NFT.tsx  Receive.tsx  Resource.tsx  Send.tsx  Settings.tsx  Voting.tsx  Wallet.tsx
src/stores/: accountStore.ts  addressBookStore.ts  notificationStore.ts  priceStore.ts  transactionStore.ts  uiStore.ts  walletStore.ts
src/styles/: globals.css
src/types/: wallet.ts
src/utils/: balance.ts
