[package]
name = "tron-wallet"
version = "0.1.0"
description = "Enterprise-grade TRON Wallet"
authors = ["TRON Wallet Team"]
edition = "2021"

[lib]
name = "tron_wallet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Crypto
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
bip39 = "2"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
dirs = "5"
clipboard-win = "5"
